Bugfix | Fix horizontal scroll

--- a/src/components/BlockJourney/BlockJourney.module.scss
+++ b/src/components/BlockJourney/BlockJourney.module.scss
@@ -8,7 +8,7 @@
   grid-template-columns: 9rem 0fr 9rem 0fr 9rem 0fr 9rem 0fr 9rem;
   justify-content: space-between;
   padding: calc(8rem + 2.8rem) 0 calc(8rem + 2.8rem + 3.6rem) 0; //sectionPt + lh
-  width: 100%;
+  width: 95%;
 
   @include breakpoint-max($screen-max-width) {
     gap: 3.2rem;
